[metadata]
license_file = LICENSE
name = backports.unittest_mock
author = Jason R. Coombs
author_email = jaraco@jaraco.com
description = Make unittest.mock available on older Pythons
long_description = file:README.rst
url = https://github.com/jaraco/backports.unittest_mock
classifiers =
	Development Status :: 5 - Production/Stable
	Intended Audience :: Developers
	License :: OSI Approved :: MIT License
	Programming Language :: Python :: 2.6
	Programming Language :: Python :: 2.7
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3.2
	Programming Language :: Python :: 3.3
	Programming Language :: Python :: 3.4
	Programming Language :: Python :: 3.5
	Programming Language :: Python :: 3.6
	Programming Language :: Python :: 3.7
	Programming Language :: Python :: 3.8
	Framework :: Pytest

[options]
packages = find:
include_package_data = true
python_requires = >=2.6
install_requires =
	mock; python_version=="2.6" or python_version=="2.7" or python_version=="3.2"

[options.extras_require]
testing =
	# upstream
	pytest >= 3.5, !=3.7.3
	pytest-checkdocs >= 1.2.3
	pytest-flake8
	pytest-black >= 0.3.7; python_implementation != "PyPy"
	pytest-cov
	pytest-mypy; python_implementation != "PyPy"
	# jaraco/skeleton#22
	jaraco.test >= 3.2.0

	# local

docs =
	# upstream
	sphinx
	jaraco.packaging >= 3.2
	rst.linker >= 1.9

	# local

[options.entry_points]
pytest11 =
	unittest_mock = backports.unittest_mock
